Fixed vertical align, replaced .classList.add with addClass in touch

--- a/themes/default/css/chocolate.less
+++ b/themes/default/css/chocolate.less
@@ -48,7 +48,6 @@
   padding: 20px;
   width: 100%;
   height: 100%;
-  vertical-align: middle;
   &.choco-error {
     .choco-slide-container {
       width: 60px;
@@ -127,9 +126,6 @@
       cursor: default;
     }
 
-    .choco-container {
-      cursor: default;
-    }
   }
 }
 
@@ -190,55 +186,12 @@
   left: 50%;
 }
 
-
 .choco-spinner {
-  .container();
-  z-index: 110;
-
-  &.choco-hide {
-    display: none;
-  }
-
-  img {
-    @size: 30px;
-    .container();
-    margin-top: round(-(@size / 2) - (@thumbnails-height / 2));
-    margin-left: round(-(@size / 2));
-    animation: spin 0.8s linear infinite;
-
-    &.choco-spinner-cssanimation {
-      display: none;
-    }
-  }
+  display: none;
 }
-
-.cssanimations .choco-spinner{
-  .choco-spinner-cssanimation {
-    display: inline-block;
-  }
-
-  .choco-spinner-gifanimation {
-    display: none;
-  }
-}
-
-
-.choco-container {
-  .container();
-  background-color: #000;
-  background-position: 0 0;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  opacity: 0;
-  cursor: pointer;
-  animation: shower 200ms ease-in-out;
-  zoom: 1;
-
-  &.choco-show {
-    box-shadow: 1px 1px 10px #111;
-    opacity: 1;
-  }
-
+.choco-loading .choco-spinner {
+  display: inline-block;
+  animation: 'spin' 1s linear infinite;
 }
 
 .choco-header {
